fix(radiobuttons): checked radio button is misaligned in RTL
* test: add visual tests radio buttons rtl

* fix(inputs): radio button checked in rtl glitch

* test: move tests into testing area element

* chore: update visual previews

* test: update visual tests for checkboxes

* chore: update visual previews

* refactor: visual tests columns

* chore: update visual previews

* test(checkboxes): more descriptive test cases

also align titles with inputs

* chore: update visual previews

--- a/packages/default/scss/input/_layout.scss
+++ b/packages/default/scss/input/_layout.scss
@@ -326,6 +326,13 @@ $checkbox-size: $icon-size !default;
         transform: scale(1);
     }
 
+    .k-rtl,
+    [dir='rtl'] {
+        .k-radio:checked + .k-radio-label::after {
+            right: $checkbox-size / 4;
+        }
+    }
+
     // Check / Radio list
     .k-radio-list {
         .k-radio-label {
